--- a/app/static/css/common.less
+++ b/app/static/css/common.less
@@ -1,30 +1,18 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-color: #f1f1f1;
-
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "微软雅黑","Times New Roman",Georgia,Serif;
-    }
-}
-a{
-  text-decoration: none;
-}
-input {
-    outline:none;
-}
-
-.float-left {
-    float: left;
-}
-.float-right {
-    float: right;
-}
-.clear-fix:after {
-    display: table;
-    content: '';
-    clear: both;
+@charset "utf-8";
+/* CSS Document */
+h1,h2,h3,h4,h5,h6,strong,p,ul,input,i,b,em,li,ol,dl,dd{font:16px "宋体";margin:0;padding:0;list-style:none;}
+/*strong{font-weight:normal;}*/
+/*p{margin:0;}*/
+a{color:#000;text-decoration:none;}
+/*ul{margin:0;padding:0; list-style:none;}*/
+input{outline:none; border:none;}
+img{border:none; display:block; /*vertical-align:top;*/}
+.clearfix:after{ content:""; display:block; clear:both;}
+.clearfix{zoom:1;} /*用来兼容IE6*/
+.fl{ float:left;}
+.fr{ float:right;}
+input::-ms-clear{ display:none;}
+input::-ms-reveal{ display:none;}
+body{
+  margin: 0;
 }
