--- a/app/containers/Left/left.less
+++ b/app/containers/Left/left.less
@@ -12,4 +12,17 @@
     line-height: 40px;
     font-weight: bold;
   }
+  .user{
+    margin-bottom: 10px;
+    span{
+      font-size: 18px;
+      margin-right: 10px;
+    }
+    b{
+      font-size: 14px;
+      margin-top: 5px;
+      color:#08c;
+      cursor: pointer;
+    }
+  }
 }
