--- a/app/static/css/common.less
+++ b/app/static/css/common.less
@@ -13,6 +13,11 @@ img{border:none; display:block; /*vertical-align:top;*/}
 .fr{ float:right;}
 input::-ms-clear{ display:none;}
 input::-ms-reveal{ display:none;}
+html,#root{
+  height: 100%;
+}
 body{
   margin: 0;
+  height: 100%;
+  background-color: #f2f2f2;
 }
