--- a/app/containers/index.less
+++ b/app/containers/index.less
@@ -1,12 +1,29 @@
 .wapper{
   margin: 0 auto;
   padding: 0 20px;
-  background-color: #f2f2f2;
   color:#333;
   nav{
     width: 100%;
     height: 120px;
     background: #000;
     margin-bottom: 20px;
+  }
+  .content{
+    display: flex;
+    .right{
+      flex: 1;
+      height: 670px;
+      border-radius:10px;
+      background-color: #fff;
+      .right-box{
+        width: 80%;
+        padding: 20px 30px 10px;
+        margin: 0 auto;
+        font-size: 14px;
+        line-height:20px;
+        max-height: 600px;
+        color: #333;
+      }
+    }
   }
 }
