--- a/app/static/css/commonList.less
+++ b/app/static/css/commonList.less
@@ -5,6 +5,9 @@
     padding: 8px 0;
     div{
       flex: 1;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
   dd{
