--- a/app/containers/index.less
+++ b/app/containers/index.less
@@ -5,7 +5,8 @@
   nav{
     width: 100%;
     height: 120px;
-    background: #000;
+    background:url('../image/bg.png') no-repeat;
+    background-size: cover;
     margin-bottom: 20px;
   }
   .content{
